# yalr

./: .cirrus.yml  .ctags  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  Untitled Diagram.xml  meson.build  project.vim  yalr.sublime-project  yalr_version.hpp.in
docker/: Dockerfile.alpine  Dockerfile.arch  Dockerfile.debian  Dockerfile.test  docker_cmds.txt
docs/: 00-doc-overview.md  Class_Diagram.xml  README.md  analyzer.md  analyzertree.uxf  common.puml  context-aware-lexing.md  errorinfo.puml  errorinfo.uxf  lrtable.uxf  options.md  options.puml  options.uxf  overview.md  parsetree.uxf  sourcetext.puml  sourcetext.uxf  symbols.puml  symbols.uxf  template_data.md  thoughts.md  util.uxf
examples/: CMakeLists.txt  GCL.yalr  calculator.yalr  calculator_main.cpp  cpp_ecmascript_regex.yalr  dot.yalr  meson.build  sqlite.yalr  yalr.yalr
examples/replcalc/: CMakeLists.txt  calculator.yalr  main.cpp  main.cpp.old
examples/yalr_regex/: CMakeLists.txt  main.cpp  regex.yalr  rpn.cpp  rpn.hpp
grammar/: lexer.dfa.gv  lexer.nfa.gv  null.yalr  regex.state  regex.yalr  regex.yalr.hpp  yalr.yalr  yexp  yexp.cpp  yexp.cpp.state.txt
lib/catch2/: README.TXT
lib/cxxopts/: cxxopts.hpp
lib/gsl/: README.TXT
lib/inja/: README.TXT  inja.hpp
scripts/: build.sh  dock-build.sh  gendiag  run-clang-tidy.sh
src/: .clang-tidy  CLIOptions.hpp  CMakeLists.txt  GCL.yalr  SymbolTable.cpp  SymbolTable.hpp  analyzer.cpp  analyzer.hpp  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  grammar.cpp  grammar.hpp  main.cpp  meson.build  parser.cpp  parser.hpp  quoted_pattern.hpp  sample.gram  single_quote.hpp  skipparser.hpp  tablegen.cpp  tablegen.hpp  template.hpp  translate.cpp  translate.hpp  type_name.hpp  yalr.yalr
src/cmake/: clang-tidy.cmake
src/include/: CLIOptions.hpp  analyzer.hpp  analyzer_pass_1.hpp  analyzer_pass_2.hpp  analyzer_tree.hpp  char_range.hpp  cli_options.hpp  code_renderer.hpp  codegen.hpp  constants.hpp  errorinfo.hpp  lrtable.hpp  option_defaults.hpp  options.hpp  overload.hpp  parse_tree.hpp  parser.hpp  parser_generator.hpp  production.hpp  regex_compile.hpp  regex_parse.hpp  regex_run.hpp  rpn.hpp  sourcetext.hpp  symbols.hpp  tablegen.hpp  template.hpp  template_genmain.hpp  translate.hpp  unlap_char_ranges.hpp  utils.hpp  vm.hpp  yassert.hpp
src/include/algo/: slr.hpp  slr_parse_table.hpp
src/include/codegen/: dice_trans.hpp  fsm.hpp  fsm_builders.hpp
src/include/templates/: lexer.hpp  postlude.hpp  preamble.hpp  slr_parser_template.hpp
src/lib/: analyzer.cpp  codegen.cpp  errorinfo.cpp  parse_tree.cpp  parser.cpp  regex.cpp  regex_compile.cpp  regex_parse.cpp  regex_run.cpp  sourcetext.cpp  tablegen.cpp  translate.cpp  unlap_char_ranges.cpp  utils.cpp
src/lib/algo/: slr_codegen.cpp  slr_tablegen.cpp
src/lib/codegen/: dfa_builder.cpp  dice_trans.cpp  nfa_builder.cpp  nfa_machine.cpp
test/: CMakeLists.txt  README.md  Test1.hpp  meson.build  runner.cpp  t01-skipparser.cpp  t01-utils.cpp  t02-quoted_pattern.cpp  t02-sourcetext.cpp  t03-single-quote.cpp  t04-type-name.cpp  t05-parser.cpp  t08-symboltable.cpp  t10-grammar.cpp  t11-termset.cpp  t20-analyzer.cpp  t21-termset-analyze.cpp  t22-parse-regex.cpp  t60-nfa_builder.cpp  t61-dfa_builder.cpp  t62-regex.cpp  ta0-yalr.cpp  test1.cpp  test1.yalr  tff-regex.cpp
test/runner_configs/: _runner_build_config.cfgfile.in  t02.1.cfgfile  t30.1.cfgfile  t30.2.cfgfile  t30.3.cfgfile
